# Blog_Django

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
djangoapp/: requirements.txt
djangoapp/project/: settings.py  urls.py
dotenv_files/: .env-example
scripts/: commands.sh  entrypoint.sh
